fix: added route for fetching all alerts and updated docs
